force-app/main/default/objects/A01_MonthlySales__c/A01_MonthlySales__c.object-meta.xml
<CustomObject>
    <label>A01_月次売上</label>
    <nameField>
        <label>A01_月次売上名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>