force-app/main/default/objects/A01_MonthlySales__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>承認ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未申請</fullName>
                <default>true</default>
                <label>未申請</label>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>承認済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>