force-app/main/default/objects/A01_MonthlySales__c/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <label>年月</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>