force-app/main/default/objects/A01_MonthlySales__c/fields/MonthlyCost__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCost__c</fullName>
    <label>月次原価</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>