force-app/main/default/objects/A01_MonthlySales__c/fields/MonthlyExpense__c.field-meta.xml
<CustomField>
    <fullName>MonthlyExpense__c</fullName>
    <label>月次費用</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>