force-app/main/default/objects/A01_MonthlySales__c/fields/MonthlySales__c.field-meta.xml
<CustomField>
    <fullName>MonthlySales__c</fullName>
    <label>月次売上</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>