force-app/main/default/objects/A01_MonthlySales__c/fields/StoreNoMonthly__c.field-meta.xml
<CustomField>
    <fullName>StoreNoMonthly__c</fullName>
    <formula>StoreR__r.StoreNo__c  &amp; &#39;_&#39; &amp;   TEXT(YEAR(Monthly__c ))  &amp; &#39;年&#39; &amp; TEXT( MONTH(Monthly__c ))  &amp; &#39;月&#39;</formula>
    <label>店番年月</label>
    <type>Text</type>
</CustomField>